@@ -11,6 +11,9 @@ New Features
 * LUCENE-5895: Lucene now stores a unique id per-segment and per-commit to aid
   in accurate replication of index files (Robert Muir, Mike McCandless)
 
+* LUCENE-5889: Add commit method to AnalyzingInfixSuggester, and allow just using .add
+  to build up the suggester.  (Varun Thacker via Mike McCandless)
+
 ======================= Lucene 4.10.0 ======================
 
 New Features
